# qit

./: .gitignore  Cargo.toml  README.md  circuit.qsim
scripts/: qiskit_run.py
src/: app.rs  grid.rs  main.rs  old_turbospin.rs  qiskit.rs  theme.rs  tiling.rs  tiling.rs_patch  turbospin.rs  workspace.rs
src/components/: benchmark_panel.rs  bloch_3d.rs  circuit_visualizer.rs  command_palette.rs  config_popup.rs  density_matrix_panel.rs  editor.rs  entanglement_panel.rs  fidelity_panel.rs  mod.rs  noise_panel.rs  probability_panel.rs  state_vector.rs  status_bar.rs  tile_picker.rs
src/dsl/: lex.rs  mod.rs  python_lex.rs  python_parse.rs  qasm_lex.rs  qasm_parse.rs
src/state/: circuit.rs  gates.rs  metrics.rs  mod.rs  noise.rs  simulation.rs  simulator.rs  ui_state.rs
