[package]
name = "qsim_ui"
version = "0.1.0"
edition = "2021"
description = "Quantum circuit simulator UI prototype (egui/eframe). UI-only — no real simulation backend yet."
license = "MIT OR Apache-2.0"

[dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = true }
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
